# hexen-unified-rs

./: .nnetfs-index.aln  Cargo.toml  README.md  rust-toolchain.toml
aln/grammar/: chat_grammar.aln
aln/specs/: neurorights_clauses.aln
clients/android/: BLEScannerActivity.java
clients/unity/: SecureLockdown.cs
clients/web/: package.json
crates/ai-gateway/src/: schema_validate.rs
crates/bioscale-evolution-cli/: Cargo.toml
crates/bioscale-evolution-cli/src/: main.rs
crates/bioscale-metrics/: Cargo.toml
crates/bioscale-metrics/src/: guard_metrics.rs  lib.rs
crates/bioscale-upgrade-macros/: Cargo.toml
crates/bioscale-upgrade-macros/src/: lib.rs
crates/bioscale-upgrade-store/: Cargo.toml
crates/bioscale-upgrade-store/src/: lib.rs  registry.rs  types.rs
crates/bioscale-upgrade-store/src/adapters/: mod.rs
crates/cybernano-guard/: Cargo.toml
crates/cybernano-guard/src/: lib.rs
crates/cybernano-vector-cyberrank/src/: lib.rs
crates/cybernano-viability-kernel/src/: lib.rs
crates/cyberswarm-neurostack/: Cargo.toml
crates/cyberswarm-neurostack/src/: bci_host_snapshot.rs  lib.rs
crates/domain-governance/: Cargo.toml
crates/domain-governance/src/: lib.rs
crates/domain-language/: Cargo.toml
crates/domain-language/src/: hercules_backup.json  lib.rs
crates/domain-waste/: Cargo.toml
crates/domain-waste/src/: lib.rs
crates/hexen-backend-core/: Cargo.toml
crates/hexen-backend-core/src/: ai_guard.rs  approval_api.rs  audit.sql  config.rs  lib.rs  main.rs  middleware.rs  security.rs
crates/hexen-evidence-registry/: Cargo.toml
crates/hexen-evidence-registry/src/: lib.rs  registry.rs
crates/hexen-workers/: Cargo.toml
crates/hexen-workers/src/: main.rs  neurotask_runtime.rs
crates/hexen-workers/src/tasks/: schedule.rs
crates/hexen-xbox-client/: Cargo.toml
crates/hexen-xbox-client/src/: main.rs
crates/mcp-k8s-bridge/src/: lib.rs
crates/organiccpualn/src/: evolvestream.rs  rohmodel.rs  schema.rs
crates/organiccpucore/src/: lib.rs
crates/sovereigntycore/src/: lib.rs  metrics.rs  types.rs
crates/sovereigntycore/tests/: safety_props.rs
crates/unreal-gateway/src/: lib.rs
docker/: dev.Dockerfile  neuromorphic.Dockerfile  neurostack.Dockerfile  worker.Dockerfile
docs/: hexen-unified-rs.md
helm/charts/hexen-neurostack/: Chart.yaml  values.yaml
helm/charts/vault/: Chart.yaml
helm/charts/xbox-addon/: Chart.yaml
helm/values/: values.yaml
infra/github/workflows/: dependency-update.yml  deploy.yml  game-ci.yml
infra/terraform/: main.tf
k8s/: config-neuro-sovereign.yaml  config-organiccpu.yaml  deployment.yaml  hexen-backend-core-deployment.yaml  namespace-neuro-lab.yaml  podsecuritypolicy.yaml  prometheus.yml  rbac.yaml  service.yaml  sovereigntycore-deployment.yaml
k8s/crds/: evolutionproposal.yaml  neurorightspolicy.yaml  organiccpuprofile.yaml
logs/nnet/: nnet-loop-v1.aln
policies/: bostrom-chat-gov-v1.nnet-cap.aln  bostrom-chat-gov-v1.nnet-rights.json  nnet-bindings-v1.nnet-bind.aln
prometheus/rules/: neuro-lab-rules.yaml
proofs/nnet/: bostrom-chat-gov-v1.nnet-proof.bchain.json
qpudatashards/policies/: bostrom-chat-gov-v1.nnet-policy.aln
scripts/: iptables_hardening.sh  refresh_materialized_views.sql  vault_check_updates.sh  verify_backup.sh
sovereignty/nnet/: nnet-evolve-YYYYMMDD.jsonl
(+3 files in other folders)
