[workspace]
members = [
    "crates/hexen-backend-core",
    "crates/hexen-workers",
    "crates/hexen-xbox-client",
    "crates/domain-waste",
    "crates/domain-language",
    "crates/domain-governance",
    "crates/bioscale-upgrade-store",
    "crates/bioscale-upgrade-macros",
    "crates/cyberswarm-neurostack",
    "crates/cybernano-guard",
    "crates/bioscale-metrics",
    "crates/bioscale-evolution-cli",
    "crates/hexen-evidence-registry",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Hexen Unified Neuromorphic Group <dev@hexen-unified.local>"]
homepage = "https://rsrch.space"
repository = "https://github.com/Doctor0Evil/hexen-unified-rs"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = "0.7"
tonic = { version = "0.12", features = ["transport"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
config = "0.15"
prometheus = "0.13"
opentelemetry = { version = "0.26", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = "0.26"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
kube = { version = "0.95", features = ["runtime", "derive"] }
prost = "0.13"
prost-types = "0.13"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
nats = "0.25"
rdkafka = { version = "0.36", features = ["tokio"] }
once_cell = "1.20"
bitflags = "2.8"
regex = "1.11"

bioscale-upgrade-store = { path = "crates/bioscale-upgrade-store" }
bioscale-upgrade-macros = { path = "crates/bioscale-upgrade-macros" }
cyberswarm-neurostack = { path = "crates/cyberswarm-neurostack" }
cybernano-guard = { path = "crates/cybernano-guard" }
bioscale-metrics = { path = "crates/bioscale-metrics" }
hexen-evidence-registry = { path = "crates/hexen-evidence-registry" }
