[package]
name = "hexen-backend-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
axum.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
config.workspace = true
prometheus.workspace = true
sqlx.workspace = true
uuid.workspace = true
time.workspace = true

bioscale-upgrade-store.workspace = true
bioscale-upgrade-macros.workspace = true
cyberswarm-neurostack.workspace = true
cybernano-guard.workspace = true
bioscale-metrics.workspace = true
hexen-evidence-registry.workspace = true
