[package]
name = "hexen-workers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
nats.workspace = true
rdkafka.workspace = true

bioscale-upgrade-store.workspace = true
cyberswarm-neurostack.workspace = true
bioscale-metrics.workspace = true
